--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,54 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
-  outline: none;
+
+/* container */
+.container {
+  margin: 40px 0;
 }
-.search-field:hover {
-  outline: none;
-  border: none;
+
+/* text title */
+.container h2 {
+  margin: 20px auto;
+  text-align: center;
+  font-weight: 600;
+  color: black;
 }
+
+/* search field */
+#search-btn {
+  background: black;
+  color: white;
+  display: block;
+  padding: 6px 12px;
+  font-size: 14px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.search-input {
+  display: block;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
 }
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -35,19 +60,24 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  background: #c4c5c5;
 }
+
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid black;
 }
+/* end of search field */
 .product-image {
   width: 150px;
   height: 150px;
 }
+
 .cart {
   width: 350px;
   /* border: 1px solid green; */
@@ -57,14 +87,18 @@ body {
   margin-right: 30px;
   position: fixed;
 }
+
 .cart-main {
   padding-right: 30px;
 }
+
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1em;
   }
+
   .cart {
     width: 300px;
     /* border: 1px solid green; */
@@ -74,10 +108,12 @@ body {
     margin-right: 30px;
     position: fixed;
   }
+
   .cart-main {
     padding-right: 10px;
   }
 }
+
 @media only screen and (max-width: 468px) {
   #all-products {
     display: grid;
